test/fixtures/typecheck/pass/T3.kite
module T3

type Maybe a { Just a, Nothing }

type Foo { Foo }

foo : Maybe Foo { Nothing }

bar : Maybe Foo { Just Foo }
