test/fixtures/typecheck/fail/BadAnnotation.kite
module BadAnnotation

type BBool { BTrue, BFalse }

foo : BBool { [] }
